# flask_base_app

./: .flaskenv  README.md  pyproject.toml  wsgi.py
app/: __init__.py  forms.py  models.py  routes.py  views.py
app/templates/: base.html
